--- a/index.html
+++ b/index.html
@@ -71,16 +71,22 @@
             font-size: 24px; font-weight: 500; color: var(--aqi-moderate); margin-bottom: 15px;
         }
 
+        /* UPDATED: Flex row to put items side-by-side */
         .aqi-details {
-            display: flex; flex-direction: column; gap: 5px; /* Stacked labels */
-            font-size: 13px; color: var(--text-secondary);
+            display: flex; 
+            flex-direction: row; 
+            justify-content: center;
+            gap: 20px; /* Spacing between the two items */
+            font-size: 13px; 
+            color: var(--text-secondary);
+            width: 100%;
         }
 
         /* --- BOTTOM AREA: ALARMS LIST --- */
         #alarms-area {
             flex: 6.5; padding: 20px; overflow-y: auto;
             display: flex; flex-direction: column;
-            overflow-x: hidden; /* Prevent horizontal scroll on page */
+            overflow-x: hidden;
         }
 
         .section-title { font-size: 28px; font-weight: 700; margin-bottom: 20px; padding-left: 5px; }
@@ -100,12 +106,11 @@
         .alarm-container {
             position: relative;
             margin-bottom: 12px;
-            height: 80px; /* Fixed height for simplicity */
+            height: 80px;
             border-radius: 16px;
-            overflow: hidden; /* Clips the red button until revealed */
+            overflow: hidden;
         }
 
-        /* The Red "Delete" Background */
         .alarm-delete-bg {
             position: absolute;
             top: 0; bottom: 0; right: 0;
@@ -121,7 +126,6 @@
             z-index: 1;
         }
 
-        /* The Actual Content (Foreground) */
         .alarm-row-content {
             position: relative;
             background-color: var(--card-bg);
@@ -133,7 +137,7 @@
             align-items: center;
             z-index: 2;
             box-sizing: border-box;
-            transition: transform 0.2s ease-out; /* Smooth snapping */
+            transition: transform 0.2s ease-out;
         }
 
         .alarm-info { display: flex; flex-direction: column; }
@@ -145,22 +149,21 @@
         }
 
         .alarm-time {
-            font-size: 26px; /* Slightly reduced from 32 to fit AQI info */
+            font-size: 26px;
             font-weight: 400;
             color: var(--text-primary);
         }
         
         .alarm-aqi-limit {
-            font-size: 26px; /* Same size as time, as requested */
+            font-size: 26px;
             font-weight: 400;
-            color: var(--text-secondary); /* Greyed out slightly for contrast */
+            color: var(--text-secondary);
         }
 
         .alarm-label {
             font-size: 13px; color: var(--text-secondary); margin-top: 4px;
         }
 
-        /* iOS Switch */
         .switch { position: relative; display: inline-block; width: 50px; height: 30px; flex-shrink: 0;}
         .switch input { opacity: 0; width: 0; height: 0; }
         .slider {
@@ -199,8 +202,8 @@
         <div class="aqi-value">85</div>
         <div class="aqi-status">Moderate</div>
         <div class="aqi-details">
-            <div>Major pollutant: PM2.5</div>
-            <div>Last updated: 10:45 AM</div>
+            <span>Major pollutant: PM2.5</span>
+            <span>Last updated: 10:45 AM</span>
         </div>
     </section>
 
@@ -269,12 +272,10 @@
 
         function handleTouchMove(e, index) {
             if (currentSwipeIndex !== index) return;
-            
             const currentX = e.touches[0].clientX;
             const diff = currentX - startX;
             const row = document.getElementById(`row-${index}`);
 
-            // Only allow swiping LEFT (negative values)
             if (diff < 0 && diff > -100) {
                 row.style.transform = `translateX(${diff}px)`;
             }
@@ -282,17 +283,12 @@
 
         function handleTouchEnd(e, index) {
             const row = document.getElementById(`row-${index}`);
-            // If we swiped row style transform value (we have to parse it)
-            // Simpler way: just check end position vs start
             const endX = e.changedTouches[0].clientX;
             const diff = endX - startX;
 
-            // Threshold: if swiped more than 80px left
             if (diff < -80) {
-                // Snap open
                 row.style.transform = `translateX(-100px)`;
             } else {
-                // Snap back closed
                 row.style.transform = `translateX(0px)`;
             }
         }
@@ -302,7 +298,6 @@
                 alarms.splice(index, 1);
                 renderAlarms();
             } else {
-                // Reset position if cancelled
                 renderAlarms(); 
             }
         }
