--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         .aqi-details {
             display: flex; flex-direction: row; gap: 15px; 
             font-size: 13px; color: var(--text-secondary);
+            margin-bottom: 30px; /* ADDED: Pushes text up away from the dots */
         }
 
         /* Indicators dots */
