--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="section-title">Alarms</div>
         <div id="empty-state" class="empty-state">
             <p>No alarms configured</p>
-            <button class="btn-add-alarm-large" onclick="openAddMenu()">+ Add</button>
+            <button class="btn-add-alarm-large" onclick="openAddAlarm()">+ Add</button>
         </div>
         <div id="alarm-list-container" class="alarm-list" style="display: none;"></div>
     </section>
