--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         /* --- TOP AREA: DASHBOARD --- */
         #aqi-area {
-            flex: 4; /* Increased flex to fit chart */
+            flex: 4;
             position: relative;
             background: linear-gradient(180deg, #1c1c1e 0%, #000000 100%);
             border-bottom: 1px solid #333;
@@ -72,10 +72,10 @@
         .dashboard-slide {
             min-width: 100%; height: 100%;
             display: flex; flex-direction: column;
-            justify-content: flex-start; /* Align top */
+            justify-content: flex-start;
             align-items: center;
             text-align: center; 
-            padding-top: 50px; /* Space for header */
+            padding-top: 50px; 
             box-sizing: border-box;
         }
 
@@ -88,21 +88,43 @@
         .aqi-details { display: flex; flex-direction: row; gap: 15px; font-size: 12px; color: var(--text-secondary); margin-bottom: 15px; }
 
         /* --- FORECAST CHART --- */
+        .forecast-title {
+            width: 100%;
+            text-align: center; /* Centered */
+            font-size: 12px;
+            color: var(--text-secondary);
+            font-weight: 600;
+            margin-bottom: 8px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
         .forecast-container {
-            width: 90%;
-            height: 80px;
+            width: 100%;
+            height: 90px;
             display: flex;
             align-items: flex-end;
-            justify-content: space-between;
-            margin-top: 10px;
-            margin-bottom: 25px; /* Space for dots */
+            justify-content: flex-start; /* Start from left for scrolling */
+            margin-top: 5px;
+            margin-bottom: 25px;
+            overflow-x: auto; /* Scrollable horizontal */
+            padding-left: 20px; /* Padding for start */
+            padding-right: 20px;
+            box-sizing: border-box;
+            /* Hide scrollbar for clean look */
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
         }
+        .forecast-container::-webkit-scrollbar {
+            display: none; /* Chrome, Safari, Opera */
+        }
+
         .forecast-column {
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: flex-end;
-            flex: 1;
+            flex: 0 0 14px; /* Fixed width per bar, don't shrink */
             height: 100%;
             gap: 4px;
         }
@@ -116,20 +138,15 @@
         .forecast-time {
             font-size: 10px;
             color: var(--text-secondary);
-            transform: rotate(-45deg); /* Slanted labels */
-            height: 12px;
+            transform: rotate(-90deg); /* Vertical */
+            height: 20px;
             width: 20px;
-            text-align: center;
-            margin-top: 4px;
-        }
-        .forecast-title {
-            width: 90%;
-            text-align: left;
-            font-size: 12px;
-            color: var(--text-secondary);
-            font-weight: 600;
-            margin-bottom: 8px;
-            text-transform: uppercase;
+            text-align: right; /* Align text to "top" of rotated box */
+            margin-top: 2px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end; /* Pushes text up towards bar */
+            white-space: nowrap;
         }
 
 
@@ -145,7 +162,7 @@
 
         /* --- BOTTOM AREA: ALARMS LIST --- */
         #alarms-area {
-            flex: 6; /* Adjusted flex ratio */
+            flex: 6; 
             padding: 20px; overflow-y: auto;
             display: flex; flex-direction: column; overflow-x: hidden;
         }
@@ -355,6 +372,13 @@
                         </select>
                     </div>
                     <div class="settings-row">
+                        <span class="settings-label">Time Format</span>
+                        <select id="setting-time-fmt" class="form-select" style="width: auto; padding: 5px 25px 5px 10px; height: 32px; background-position: right 5px center;" onchange="updateTimeFormat(this.value)">
+                            <option value="24h" selected>24 Hour</option>
+                            <option value="12h">12 Hour</option>
+                        </select>
+                    </div>
+                    <div class="settings-row">
                         <span class="settings-label">Language</span>
                         <select class="form-select" style="width: auto; padding: 5px 25px 5px 10px; height: 32px; background-position: right 5px center;">
                             <option>English</option>
@@ -480,12 +504,13 @@
         // --- DATA ---
         let alarms = []; 
         let selectedDays = ["Never"];
+        let timeFormat = "24h";
         
-        // Mock Forecast Data Gen
+        // Mock Forecast Data Gen: 72 hours, storing raw hour integer
         function genForecast() {
-            return Array.from({length: 8}, (_, i) => ({
+            return Array.from({length: 72}, (_, i) => ({
                 val: Math.floor(Math.random() * 100) + 20,
-                time: (new Date().getHours() + (i*3)) % 24 + ":00"
+                hour: (new Date().getHours() + i) % 24
             }));
         }
 
@@ -507,19 +532,31 @@
                     : '';
 
                 // Build Forecast Chart HTML
-                const barsHtml = loc.forecast.map(d => {
+                const barsHtml = loc.forecast.map((d, i) => {
                     let col = "var(--aqi-good)";
                     if (d.val > 50) col = "var(--aqi-moderate)";
                     if (d.val > 100) col = "var(--aqi-unhealthy)";
                     if (d.val > 150) col = "var(--danger-color)";
                     
-                    // Scale bar height: max height 100% ≈ 200 AQI
+                    // Scale bar height: compressed height
                     const h = Math.min((d.val / 200) * 100, 100); 
+
+                    // Time label logic
+                    let timeLabel = "";
+                    if (i % 3 === 0) { // Every 3rd hour
+                        if (timeFormat === '24h') {
+                            timeLabel = (d.hour < 10 ? '0' : '') + d.hour + ":00";
+                        } else {
+                            const suffix = d.hour >= 12 ? 'PM' : 'AM';
+                            const h12 = d.hour % 12 || 12;
+                            timeLabel = h12 + " " + suffix;
+                        }
+                    }
 
                     return `
                         <div class="forecast-column">
                             <div class="forecast-bar" style="height: ${h}%; background-color: ${col};"></div>
-                            <div class="forecast-time">${d.time}</div>
+                            <div class="forecast-time">${timeLabel}</div>
                         </div>
                     `;
                 }).join('');
@@ -533,7 +570,7 @@
                         <span>Major pollutant: ${loc.pollutant}</span><span>•</span><span>Last updated: ${loc.time}</span>
                     </div>
 
-                    <div class="forecast-title">24H Forecast</div>
+                    <div class="forecast-title">FORECAST</div>
                     <div class="forecast-container">
                         ${barsHtml}
                     </div>
@@ -546,14 +583,25 @@
             renderSettingsLocations(); 
         }
 
+        function updateTimeFormat(val) {
+            timeFormat = val;
+            renderDashboard();
+        }
+
         const dashArea = document.getElementById('aqi-area');
         let dashStartX = 0;
         dashArea.addEventListener('touchstart', (e) => { dashStartX = e.touches[0].clientX; });
         dashArea.addEventListener('touchend', (e) => {
             const diff = e.changedTouches[0].clientX - dashStartX;
-            if (diff > 50 && currentLocIndex > 0) currentLocIndex--;
-            else if (diff < -50 && currentLocIndex < locations.length - 1) currentLocIndex++;
-            renderDashboard();
+            // Only swipe location if the swipe was big enough and NOT inside the chart (chart has its own scroll)
+            // But touch events bubble. For simplicity, we swipe location unless user swipes strictly horizontally on chart.
+            // Actually, chart overflow-x handles swipe naturally. We need to prevent dash swipe if target is chart?
+            // Simple approach: if scrollable area is touched, let it scroll. 
+            if (!e.target.closest('.forecast-container')) {
+                if (diff > 50 && currentLocIndex > 0) currentLocIndex--;
+                else if (diff < -50 && currentLocIndex < locations.length - 1) currentLocIndex++;
+                renderDashboard();
+            }
         });
 
         function updateLocationDropdown() {
