--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         .forecast-container {
             width: 100%;
-            height: 160px; /* Fixed container height */
+            height: 160px; /* Fixed height */
             display: flex;
             margin-top: 5px;
             margin-bottom: 25px;
@@ -110,34 +110,44 @@
             padding-left: 20px;
             padding-right: 20px;
             box-sizing: border-box;
-            /* Flex layout for columns */
-            align-items: stretch; 
-            -webkit-overflow-scrolling: touch; /* Smooth scroll on iOS */
-            /* Hide scrollbar */
+            -webkit-overflow-scrolling: touch;
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
         .forecast-container::-webkit-scrollbar { display: none; }
 
+        /* The Column: Holds the Bar Area (top) and Text Area (bottom) */
         .forecast-column {
             display: flex;
             flex-direction: column;
-            flex: 0 0 16px; /* Slightly wider column for easier spacing */
-            margin-right: 2px; /* Small gap between bars */
+            min-width: 30px; /* Wider column for better touch/visibility */
             height: 100%;
+            margin-right: 2px;
         }
         
-        .forecast-bar {
+        /* The Top Area: Strictly defined height for the bar space */
+        .forecast-bar-area {
+            height: calc(100% - 50px); /* Fill space minus text height */
             width: 100%;
-            border-radius: 2px; /* Slight radius */
-            opacity: 0.8;
-            flex-grow: 1; /* Fills all available space above text */
-            transition: background-color 0.3s ease;
+            display: flex;
+            align-items: flex-end; /* Align bar to bottom of this area */
+            justify-content: center; /* Center bar horizontally */
         }
 
+        /* The Bar Itself */
+        .forecast-bar {
+            width: 18px; /* Wider, substantial bars */
+            border-top-left-radius: 3px;
+            border-top-right-radius: 3px;
+            opacity: 0.85;
+            transition: background-color 0.3s ease;
+            /* Height is set via inline JS style */
+        }
+
+        /* The Bottom Area: Strictly defined height for text */
         .forecast-time {
-            height: 50px; /* Rigid height */
-            flex-shrink: 0; /* Never shrink */
+            height: 50px;
+            min-height: 50px;
             width: 100%;
             display: flex;
             align-items: center;
@@ -145,14 +155,14 @@
             position: relative;
         }
         
+        /* The Rotated Text */
         .forecast-time span {
             position: absolute;
-            top: 10px;
             font-size: 10px;
             color: var(--text-secondary);
-            transform: rotate(90deg);
-            transform-origin: center center;
+            transform: rotate(-90deg); /* Counter-clockwise to read up */
             white-space: nowrap;
+            /* Adjust offset if needed */
         }
 
 
@@ -546,7 +556,7 @@
                     ? `<svg class="location-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2L4.5 20.29l.71.71L12 18l6.79 3 .71-.71z"></path></svg>` 
                     : '';
 
-                // Build Forecast Chart HTML
+                // Build Forecast Chart HTML with strict wrapper
                 const barsHtml = loc.forecast.map((d, i) => {
                     let col = "var(--aqi-good)";
                     if (d.val > 50) col = "var(--aqi-moderate)";
@@ -570,7 +580,9 @@
 
                     return `
                         <div class="forecast-column">
-                            <div class="forecast-bar" style="height: ${h}%; background-color: ${col};"></div>
+                            <div class="forecast-bar-area">
+                                <div class="forecast-bar" style="height: ${h}%; background-color: ${col};"></div>
+                            </div>
                             <div class="forecast-time"><span>${timeLabel}</span></div>
                         </div>
                     `;
