--- a/index.html
+++ b/index.html
@@ -324,6 +324,12 @@
             direction: ltr;
         }
 
+        /* DEBUG STYLES - REMOVE LATER */
+        .forecast-container { border: 2px solid red !important; }
+        .forecast-column { border: 1px solid blue !important; }
+        .forecast-bar-area { border: 1px solid green !important; background: rgba(0, 255, 0, 0.2); }
+        .forecast-time { border: 1px solid orange !important; }
+
     </style>
 </head>
 <body>
