--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 
         /* --- TOP AREA: DASHBOARD --- */
         #aqi-area {
-            flex: 4;
+            /* CHANGED: Gave top area more space (60% vs 40%) to fit the chart on mobile */
+            flex: 6;
             position: relative;
             background: linear-gradient(180deg, #1c1c1e 0%, #000000 100%);
             border-bottom: 1px solid #333;
@@ -97,11 +98,16 @@
             margin-bottom: 8px;
             text-transform: uppercase;
             letter-spacing: 1px;
+            /* Prevent title from being crushed */
+            flex-shrink: 0; 
         }
 
         .forecast-container {
             width: 100%;
-            height: 160px; 
+            height: 160px;
+            min-height: 160px; /* Enforce height */
+            /* CRITICAL FIX: Prevent container from shrinking on small screens */
+            flex-shrink: 0; 
             display: flex;
             margin-top: 5px;
             margin-bottom: 25px;
@@ -119,12 +125,11 @@
         .forecast-column {
             display: flex;
             flex-direction: column;
-            flex: 0 0 30px; /* Fixed width of 30px */
+            flex: 0 0 30px; 
             margin-right: 2px;
             height: 100%;
         }
         
-        /* Bar Area: Fills remaining space */
         .forecast-bar-area {
             flex: 1; 
             width: 100%;
@@ -142,27 +147,26 @@
             transition: background-color 0.3s ease;
         }
 
-        /* Text Area: Fixed Height */
         .forecast-time {
             height: 60px; 
-            min-height: 60px; /* Strict height enforcement */
+            min-height: 60px;
             width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
-            flex-shrink: 0; /* Never shrink this container */
+            flex-shrink: 0; 
         }
         
         .forecast-time span {
             display: block;
-            width: 60px; /* Force visual width */
-            min-width: 60px; /* Ensure it never shrinks below 60px */
+            width: 60px;
+            min-width: 60px;
             text-align: center;
             font-size: 10px;
             color: var(--text-secondary);
             transform: rotate(-90deg);
             white-space: nowrap;
-            flex-shrink: 0; /* Crucial for iPhone: Prevent flex item compression */
+            flex-shrink: 0; 
         }
 
 
@@ -178,7 +182,8 @@
 
         /* --- BOTTOM AREA: ALARMS LIST --- */
         #alarms-area {
-            flex: 6; 
+            /* CHANGED: Reduced bottom area space to 40% to accommodate larger chart area */
+            flex: 4; 
             padding: 20px; overflow-y: auto;
             display: flex; flex-direction: column; overflow-x: hidden;
         }
@@ -323,12 +328,6 @@
             text-align-last: right; /* Aligns selected text right in Chrome/Safari */
             direction: ltr;
         }
-
-        /* DEBUG STYLES - REMOVE LATER */
-        .forecast-container { border: 2px solid red !important; }
-        .forecast-column { border: 1px solid blue !important; }
-        .forecast-bar-area { border: 1px solid green !important; background: rgba(0, 255, 0, 0.2); }
-        .forecast-time { border: 1px solid orange !important; }
 
     </style>
 </head>
