--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 
         /* --- TOP AREA: DASHBOARD --- */
         #aqi-area {
-            /* CHANGED: Gave top area more space (60% vs 40%) to fit the chart on mobile */
-            flex: 6;
+            flex: 4;
             position: relative;
             background: linear-gradient(180deg, #1c1c1e 0%, #000000 100%);
             border-bottom: 1px solid #333;
@@ -98,16 +97,12 @@
             margin-bottom: 8px;
             text-transform: uppercase;
             letter-spacing: 1px;
-            /* Prevent title from being crushed */
-            flex-shrink: 0; 
         }
 
         .forecast-container {
             width: 100%;
-            height: 160px;
-            min-height: 160px; /* Enforce height */
-            /* CRITICAL FIX: Prevent container from shrinking on small screens */
-            flex-shrink: 0; 
+            /* UPDATED: Reduced height to compact the chart */
+            height: 100px; 
             display: flex;
             margin-top: 5px;
             margin-bottom: 25px;
@@ -125,11 +120,15 @@
         .forecast-column {
             display: flex;
             flex-direction: column;
-            flex: 0 0 30px; 
-            margin-right: 2px;
+            /* UPDATED: Reduced column width to 14px */
+            flex: 0 0 14px; 
+            /* UPDATED: Removed margin for tighter spacing */
+            margin-right: 0px; 
             height: 100%;
+            align-items: center; /* Center the bar in the column */
         }
         
+        /* Bar Area: Fills remaining space */
         .forecast-bar-area {
             flex: 1; 
             width: 100%;
@@ -140,16 +139,18 @@
         }
 
         .forecast-bar {
-            width: 18px;
-            border-top-left-radius: 3px;
-            border-top-right-radius: 3px;
+            /* UPDATED: Reduced bar width to 12px */
+            width: 12px;
+            border-top-left-radius: 2px;
+            border-top-right-radius: 2px;
             opacity: 0.85;
             transition: background-color 0.3s ease;
         }
 
+        /* Text Area: Fixed Height */
         .forecast-time {
             height: 60px; 
-            min-height: 60px;
+            min-height: 60px; /* Keep this fixed to preserve alignment */
             width: 100%;
             display: flex;
             align-items: center;
@@ -182,8 +183,7 @@
 
         /* --- BOTTOM AREA: ALARMS LIST --- */
         #alarms-area {
-            /* CHANGED: Reduced bottom area space to 40% to accommodate larger chart area */
-            flex: 4; 
+            flex: 6; 
             padding: 20px; overflow-y: auto;
             display: flex; flex-direction: column; overflow-x: hidden;
         }
